Fix alignment of Browse Tasks button.

--- a/static/sass/pybossa/_buttons.scss
+++ b/static/sass/pybossa/_buttons.scss
@@ -2,7 +2,10 @@
     min-width: 32.5%;
 }
 
-.btn-contribute,
+.btn-group.btn-contribute {
+    min-height: 75px;
+}
+
 .btn-admin-categories{
     margin: 21px 0;
 }
